packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-13/fixed.js
const ruleSetIdx = 'bar'
const lintResults = [{
	ruleId: 'foo'
}];
const lintedRegistry = {
	rules: {
		foo: {
			bar: {
				errorCount: 0
			}
		}
	},
};

lintResults.forEach(function(result) {
	if (lintedRegistry.rules[result.ruleId][ruleSetIdx]) {
		lintedRegistry.rules[result.ruleId][ruleSetIdx].errorCount += 1;
	}
});
